# dymo-core

./: .env.example  .gitignore  API_ROUTES.md  BACKEND_ARCHITECTURE.md  BACKEND_IMPLEMENTATION_PLAN.md  BACKEND_PROGRESS.md  CHANGELOG.md  CONTRIBUTING.md  DATABASE_SCHEMA_PLAN.md  LICENSE  MODULE_DEVELOPMENT_GUIDE.md  README.md  SECURITY.md  SECURITY_CHECKLIST.md  TODO.md  pyproject.toml
.github/workflows/: tests.yml
frontend/: .env.example  .gitignore  AGENT.md  FRONTEND_PROGRESS.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: providers.tsx
frontend/src/features/: routes.ts
frontend/src/lib/: api.ts  auth.ts  endpoints.ts  permissions.ts  query-client.ts  utils.ts
frontend/src/store/: auth-store.ts
frontend/src/types/: index.ts
migrations/: env.py
migrations/versions/: 0043323f6947_add_api_keys_and_webhooks_tables.py  5a569e9cc1e6_add_cash_register_simple_tables.py  72bf052c5ed3_remove_duplicate_tenant_indexes.py  7f2d0fd9e6ab_add_platform_provider_tables.py  a3fbd72007c0_add_tenant_foreign_keys.py  f699a0844667_initial_schema.py
src/dymo_saas_core/: __init__.py  app.py  cli.py  exceptions.py  main.py  routers.py  settings.py
tests/: conftest.py  test_access_control.py  test_api_keys.py  test_billing_transitions.py  test_cache.py  test_cash_register.py  test_import.py  test_outbox_worker.py  test_phase4.py  test_platform_routes.py  test_roles_dynamic.py  test_route_namespacing.py  test_saas.py  test_stripe_integration.py  test_webhooks.py
(+119 files in other folders)
